fix(UI): no content overflow

--- a/public/vocables/modules/shared/styles.less
+++ b/public/vocables/modules/shared/styles.less
@@ -250,15 +250,8 @@ html {
     margin-bottom: 0px !important;
 }
 
-.ui-dialog {
-    max-width: 95vw !important;
-    max-height: 92vh !important;
-    box-sizing: border-box !important;
-}
-
 .ui-dialog .ui-dialog-content {
     overflow: auto !important;
-    max-height: calc(92vh - 60px) !important;
     box-sizing: border-box;
 }
 
